feat: :sparkles: Change URL LB in ListUsers

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -6,7 +6,7 @@ PUBLIC_IP_PRODUCT_DELETE=localhost
 PUBLIC_IP_PRODUCT_UPDATE=localhost
 PUBLIC_IP_PRODUCT=localhost
 PUBLIC_IP_LOCATIONS=localhost
-PUBLIC_IP_USERS=localhost
+PUBLIC_IP_USERS=LBListUser-9f7a9bbd31639cb3.elb.us-east-1.amazonaws.com
 PUBLIC_IP_USER_UPDATE=localhost
 PUBLIC_IP_USER_DELETE=localhost
 PUBLIC_IP_CATEGORIES=localhost
