feat: :sparkles: Add aws config

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,4 @@
-PUBLIC_IP_AUTH=localhost
+PUBLIC_IP_AUTH=LBLogin-e0af7932fdeef758.elb.us-east-1.amazonaws.com
 PUBLIC_IP_REGISTER=localhost
 PUBLIC_IP_OFFERS=localhost
 PUBLIC_IP_PRODUCT_CREATE=localhost
